Fix text alignment from 'centre' to 'center'

--- a/style.css
+++ b/style.css
@@ -5,10 +5,10 @@ body {
     margin: 40px;
 }
 h1 {
-    text-align: centre;
+    text-align: center;
 }
 title {
-    text-align: centre;
+    text-align: center;
 }
 a {
     color: #88ccff;
